unpackaged/objects/LOAN_AUTHENTICATION__mdt.object
<CustomObject>
    <fields>
        <fullName>APP_NAME__c</fullName>
        <label>APP_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APP_PASS__c</fullName>
        <label>APP_PASS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APP_VERSION__c</fullName>
        <label>APP_VERSION</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authentication__c</fullName>
        <label>Authentication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <label>Collection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEVICE_ID__c</fullName>
        <label>DEVICE_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_applicant_search__c</fullName>
        <label>Existing applicant search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORMNO__c</fullName>
        <label>FORMNO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_loan_details__c</fullName>
        <label>Get loan details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPADDRESS__c</fullName>
        <label>IPADDRESS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATITUDE__c</fullName>
        <label>LATITUDE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LONGITUDE__c</fullName>
        <label>LONGITUDE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Creation_UCV__c</fullName>
        <label>Loan Creation UCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_TAT__c</fullName>
        <label>Loan TAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_creation__c</fullName>
        <label>Loan Creation SME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Report__c</fullName>
        <label>PDF Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pancard_search__c</fullName>
        <label>Pancard search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIQUE_REQUEST_ID__c</fullName>
        <label>UNIQUE_REQUEST_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID__c</fullName>
        <label>USER_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>LOAN AUTHENTICATION</label>
    <pluralLabel>LOAN AUTHENTICATIONS</pluralLabel>
</CustomObject>